--- a/app.json
+++ b/app.json
@@ -15,10 +15,7 @@
     ],
     "plugins": [
       "@react-native-firebase/app"
-    ],
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
+    ],    
     "android": {
       "package": "com.rockethelp",
       "googleServicesFile": "./google-services.json",
@@ -30,6 +27,19 @@
     "ios": {
       "bundleIdentifier": "com.rockethelp",
       "googleServicesFile": "./GoogleService-Info.plist"
+    },
+    "web": {
+      "favicon": "./assets/favicon.png",
+      "config": {
+        "firebase": {
+          "apiKey": "AIzaSyC6Bzu1bC-Mbp-N0IN8kRGef_5U8TvX3eA",
+          "authDomain": "rocket-help-b9610.firebaseapp.com",
+          "projectId": "rocket-help-b9610",
+          "storageBucket": "rocket-help-b9610.appspot.com",
+          "messagingSenderId": "669971153637",
+          "appId": "1:669971153637:web:dfd0fce1168e7ad9ec8a0c"
+        }
+      }
     }
   }
 }
