--- a/ios/rockethelp/Supporting/Expo.plist
+++ b/ios/rockethelp/Supporting/Expo.plist
@@ -11,6 +11,6 @@
     <key>EXUpdatesSDKVersion</key>
     <string>45.0.0</string>
     <key>EXUpdatesURL</key>
-    <string>https://exp.host/@anonymous/rocket-help</string>
+    <string>https://exp.host/@renanexpo/rocket-help</string>
   </dict>
 </plist>
