--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "expo-font": "~10.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
-    "firebase": "^9.9.0",
     "native-base": "^3.4.9",
     "phosphor-react-native": "^1.1.2",
     "react": "17.0.2",
@@ -25,7 +24,8 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "firebase": "8.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
