--- a/app.json
+++ b/app.json
@@ -18,10 +18,10 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#996DFF"
       },
+      "googleServicesFile": "./google-services.json",
       "package": "com.renanexpo.rockethelp"
     },
     "ios": {
-      "bundleIdentifier": "com.renanexpo.rockethelp"
     },
     "web": {
       "favicon": "./assets/favicon.png",
