--- a/eas.json
+++ b/eas.json
@@ -1,20 +1,13 @@
 {
   "build": {
+    "release": {},
     "development": {
+      "developmentClient": true,
       "distribution": "internal",
-      "android": {
-        "gradleCommand": ":app:assembleDebug"
-      },
-      "ios": {
-        "buildConfiguration": "Debug"
-      }
-    },
-    "preview": {
-      "distribution": "internal"
-    },
-    "production": {}
+      "node": "16.9.1"
+    }
   },
   "submit": {
-    "production": {}
+    "release": {}
   }
 }
