--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "expo-font": "~10.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
-    "firebase": "8.2.3",
+    "firebase": "^9.9.1",
     "native-base": "^3.4.9",
     "phosphor-react-native": "^1.1.2",
     "react": "17.0.2",
